// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTableCell should be rendered correctly 1`] = `
<DocumentFragment>
  <div
    class="uui-dt-vars root uui-table-cell cell data-table-cell root uui-size-36 uui-dt-first-column uui-dt-last-column align-widgets-top"
    role="cell"
    style="min-width: 150px; flex-basis: 150px; --uui-dt-cell-padding-start: var(--uui-dt-cell-padding-edge); --uui-dt-cell-padding-end: var(--uui-dt-cell-padding-edge);"
  >
    <div
      class="dragHandleWrapper"
      style="width: 0px;"
    >
      <div
        class="dragHandle container uui-drag-handle noIcon"
      />
    </div>
    <div
      class="contentWrapper"
    >
      <div>
        Test
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DataTableCell should be rendered correctly with additional props 1`] = `
<DocumentFragment>
  <div
    class="uui-dt-vars root uui-table-cell cell data-table-cell root uui-size-48 uui-dt-first-column uui-dt-last-column align-widgets-top"
    role="cell"
    style="min-width: 150px; flex-basis: 150px; --uui-dt-cell-padding-start: var(--uui-dt-cell-padding-edge); --uui-dt-cell-padding-end: var(--uui-dt-cell-padding-edge);"
  >
    <div
      class="dragHandleWrapper"
      style="width: 0px;"
    >
      <div
        class="dragHandle container uui-drag-handle noIcon"
      />
    </div>
    <div
      class="contentWrapper"
    >
      <div>
        Test
      </div>
    </div>
  </div>
</DocumentFragment>
`;
